--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "jquery-validation": "^1.16.0",
     "js-cookie": "^2.1.3",
     "lodash": "^4.17.4",
-    "moment": "^2.18.1",
-    "moment-timezone": "^0.5.11",
+    "moment": "~2.18.1",
+    "moment-timezone": "~0.5.11",
     "node-sass": "^4.5.0",
     "nprogress": "^0.2.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
