--- a/wercker.yml
+++ b/wercker.yml
@@ -270,7 +270,7 @@ build:
           # API3
           export API3_KEY=${API3_KEY}
           export API3_SECRET=${API3_SECRET}
-          export API3_ADDR_XVG=${API3_ADDR_XVG}
+          export API3_PUBLIC_KEY_C1=${API3_PUBLIC_KEY_C1}
           # CARDPMT
           export CARDPMT_API_ID=${CARDPMT_API_ID}
           export CARDPMT_API_PASS=${CARDPMT_API_PASS}
