--- a/nginx.conf
+++ b/nginx.conf
@@ -82,7 +82,7 @@ http {
       # TODO: find a conditional way to set this
       # header based on it's presence / HOST header
       # 
-      # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       # enable this if and only if you use HTTPS
       proxy_set_header X-Forwarded-Proto https;
       proxy_set_header Host $http_host;
