--- a/requirements.txt
+++ b/requirements.txt
@@ -52,4 +52,5 @@ django-guardian==1.4.9
 dredd-hooks==0.1.3
 django-fsm==2.6.0
 -e git+https://github.com/ericsomdahl/python-bittrex.git#egg=bittrex
+cached-property>=1.3.1
 
