--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
           options:
             syslog-address: ${LOGSTASH_ADDRESS}:${LOGSTASH_PORT}
     postgis:
-        image: mdillon/postgis
+        image: mdillon/postgis:9.6
         environment:
            POSTGRES_USER: ${POSTGIS_ENV_POSTGRES_USER}
            POSTGRES_PASSWORD: ${POSTGIS_ENV_POSTGRES_PASSWORD}
