--- a/requirements.txt
+++ b/requirements.txt
@@ -54,4 +54,4 @@ django-fsm==2.6.0
 -e git+https://github.com/ericsomdahl/python-bittrex.git#egg=bittrex
 -e git+https://github.com/SarunasAzna/poloniex.git#egg=poloniex
 cached-property>=1.3.1
-
+pycrypto==2.6.1
