Feature/eth tokens (#574)
* WIP: Methods for Ethash trading

* Pr Comments, lock unlock mane ETH account

* fix get_fn

* lock ETH only on sendTransactions, import scaffold for tokens

* WIP: ETH import with Token txns

* WIP: start for erc20 calls

* WIP: some erc20 methods tests

* WIP: get balance for tokens

* WIP: full txs from block

* WIP: release tokens

* WIP: data_hash tests

* WIP: tests for ethash import

* WIP: BDG pairs and tests

* WIP: txs import tests for BDG

* WIP: ethash release for ETH

* WIP: ethash release for BDG

* WIP: fix check_tx for ethash

* WIP: EOS tickers

* WIP: EOS release and import tests

* WIP: some tests for resend_to_main_card

* WIP: test for add gas

* WIP: update wercker settings

* WIP: privete methods update

* code cleaning and create_address ethash tests

* fix selenium

--- a/requirements.txt
+++ b/requirements.txt
@@ -54,4 +54,5 @@ django-fsm==2.6.0
 -e git+https://github.com/ericsomdahl/python-bittrex.git#egg=bittrex
 -e git+https://github.com/SarunasAzna/poloniex.git#egg=poloniex
 cached-property>=1.3.1
+web3>=3.16.2
 pycrypto==2.6.1
