enable all pairs prod + restrict admin access vpn

--- a/nginx.conf
+++ b/nginx.conf
@@ -63,6 +63,20 @@ http {
     # max upload size
     client_max_body_size 75M;   # adjust to taste
 
+    location ^~ /admin/ {  # Applies to ALL of the admin portal
+        # Pass proxy and report user's IP address to Django
+        proxy_redirect off;
+        proxy_pass http://app_server;
+        proxy_set_header    Host $host;
+        proxy_set_header    X-Real-IP $remote_addr;
+        proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        # Define who is allowed at this location
+        allow  192.168.99.*;
+
+        deny   all;   # deny all others
+    }
+
     # Django media
     location /media  {
         alias /usr/share/nginx/html/media;  # Django project's media files - mounted as a volume in the container
