--- a/nginx.conf
+++ b/nginx.conf
@@ -77,6 +77,10 @@ http {
         deny   all;   # deny all others
     }
 
+    location /admin/ {  # ONLY the admin login screen
+        limit_req zone=one burst=5;
+    }
+
     # Django media
     location /media  {
         alias /usr/share/nginx/html/media;  # Django project's media files - mounted as a volume in the container
