--- a/nginx.conf
+++ b/nginx.conf
@@ -72,13 +72,8 @@ http {
         proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
 
         # Define who is allowed at this location
-        allow  192.168.99.*;
-
+        allow  192.168.99.1;
         deny   all;   # deny all others
-    }
-
-    location /admin/ {  # ONLY the admin login screen
-        limit_req zone=one burst=5;
     }
 
     # Django media
