--- a/wercker.yml
+++ b/wercker.yml
@@ -104,6 +104,7 @@ dev:
           python manage.py loaddata core/fixtures/pairs_xvg.json
           python manage.py loaddata core/fixtures/pairs_doge.json
           python manage.py loaddata core/fixtures/pairs_nano.json
+          python manage.py loaddata core/fixtures/pairs_omg.json
     - script:
         name: Django import Payment Methods fixture
         code: |
@@ -436,6 +437,7 @@ build:
           python manage.py loaddata core/fixtures/pairs_doge.json
           python manage.py loaddata core/fixtures/pairs_xvg.json
           python manage.py loaddata core/fixtures/pairs_nano.json
+          python manage.py loaddata core/fixtures/pairs_omg.json
 
           if [ ! -z $CMS_FROM_FIXTURE] && [ ${CMS_FROM_FIXTURE} -eq 1 ]
           then
