Profit and Loss including covers (#621)
* import bug fix (#611)

* Fix typo and check if git hooks folder exists (#593)

* Bug/FIX resend_to_main_card for ETH (#613)

* WIP: value error on resend ETH

* WIP: tests for release Value Error on resend ETH funds

* resend_to_main settings changed

* Feature/kucoin ticker (#614)

* Kucoin ticker classes and funcs added

* Kucoin adapter working

* KucoinAdapter class changed, 1 time requesting

* added mocked response of kucoin market

* XRB changes to NANO, KucoinAdapter addet kucoin_format func, changed test where symbols NANO is needed

* Fixed some code, added NANOUSD and NANOEUR pairs

* pairs_nano.json file added in core/tests/base.py

* fix js

* switch backend to api tests on pre-commit (#617)

* New get_price endpoint (#612)

* New get_price endpoint

* Handle min and max amounts.

* Return json errors

* Change variable names

* Code review changes

* Change url structure and exception initialization

* Update tests and change pair getting

* Backend tests

* Move order.set_payment_preference from save() to calculate_from()

* One more test and pep8+isort

* rename

* auto-audit task and suspicious_transaction.time (#616)

* PnL MVP (#615)

* WIP: PnL properties

* WIP: PNL test

* WIP: migrations

* WIP: PnL on orders

* WIP: so scatches

* WIP: wip

* WIP: pnl_sheet save

* WIP: migrations and admin scaffold

* WIP: Pnl sheet properties

* WIP: task and stuff

* task and stuff

* PnL admin views

* WIP: beggining of PnL tests

* WIP: stset

* call strs's on tests

* Fix from/to default values

* method_lists to all api sets (#591)

* add -t (for test case option) to run-tests.sh

* edit run-tests opts

* WIP: 1/4 cover pnl cases

* WIP: 2/4 cover pnl cases

* WIP: 4/4 cover pnl cases

--- a/wercker.yml
+++ b/wercker.yml
@@ -135,7 +135,6 @@ dev:
           fi
     - script:
         name: Link pre-commit hook script
-        code: |
           chmod +x .pre-commit.sh
           if [ ! -d .git/hooks/ ]; then
             mkdir .git/hooks/
@@ -610,7 +609,7 @@ tests:
     - script:
         name: Backend tests
         code: |
-          DJANGO_SETTINGS_MODULE=nexchange.settings_test ./run-tests.sh -c
+          DJANGO_SETTINGS_MODULE=nexchange.settings_test ./run-tests.sh -c 1
 
     - script:
         name: Selenium tests
