move to n.exchange (#645)

--- a/nginx.conf
+++ b/nginx.conf
@@ -57,7 +57,7 @@ http {
 
 
     # the domain name it will serve for
-    server_name api.nexchange.io;  # site public FQDN
+    server_name api.n.exchange;  # site public FQDN
     charset     utf-8;
 
     # max upload size
