--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "karma-jquery": "^0.1.0",
     "karma-phantomjs-launcher": "^0.1.4",
     "node-sass": "^4.5.0",
-    "phantomjs-prebuilt": "~2.1",
+    "phantomjs": "^2.1.7",
     "react-hot-loader": "^1.3.1",
     "sass": "^0.5.0",
     "sass-loader": "^6.0.2",
