--- a/requirements.txt
+++ b/requirements.txt
@@ -55,7 +55,7 @@ django-fsm==2.6.0
 -e git+https://github.com/SarunasAzna/poloniex.git#egg=poloniex
 cached-property>=1.3.1
 eth-utils==0.7.0
-web3>=3.16.2
+web3==3.16.5
 pycrypto==2.6.1
 django-extensions==1.9.9
 Werkzeug==0.14.1
