--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
-    "bootstrap-loader": "^2.0.0-beta.22",
+    "bootstrap-loader": "^2.2.0",
     "bootstrap-sass": "^3.3.7",
     "bootstrap-social": "^5.1.1",
     "bootstrap-toggle": "^2.2.2",
@@ -28,12 +28,12 @@
     "jquery-validation": "^1.16.0",
     "js-cookie": "^2.1.3",
     "lodash": "^4.17.4",
-    "moment": "~2.18.1",
-    "moment-timezone": "~0.5.11",
+    "moment": "^2.19.3",
+    "moment-timezone": "^0.5.11",
     "node-sass": "^4.5.0",
     "nprogress": "^0.2.0",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "resolve-url-loader": "^2.0.0",
+    "resolve-url-loader": "2.0.0",
     "select2": "^4.0.3",
     "style-loader": "^0.13.2",
     "toastr": "^2.1.2",
@@ -42,7 +42,8 @@
     "webpack-bundle-tracker": "^0.2.0",
     "x-editable": "^1.5.1",
     "watchify": "3.9.0",
-    "dredd": "4.2.1"
+    "dredd": "4.2.1",
+    "resolve": "1.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
