Update nginx.conf (#716)
* Update nginx.conf

* Update nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -63,7 +63,7 @@ http {
     # max upload size
     client_max_body_size 75M;   # adjust to taste
 
-    location ^~ /admin/ {  # Applies to ALL of the admin portal
+    location ~ ^[a-zA-Z][a-zA-Z]/admin/(.+)?$ {  # Applies to ALL of the admin portal
         # Pass proxy and report user's IP address to Django
         proxy_redirect off;
         proxy_pass http://app_server;
