--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-phonenumber-field>=1.1.0
 django-safedelete==0.3.3
 djangorestframework>=3.4.4
 flake8>=3.0.4
+pycodestyle==2.3.1
 gunicorn>=19.6.0
 ipdb>=0.10.1
 ipython>=5.1.0
@@ -27,7 +28,7 @@ selenium>=2.53.6
 twilio==5.4.0
 requests-mock>=1.0.0
 django-filter>=0.14.0
-psycopg2>=2.6.1
+psycopg2-binary>=2.6.1
 django-session-security
 django-axes==2.3.2
 bs4
@@ -64,3 +65,4 @@ iptools==0.6.1
 numpy==1.14.1
 django-otp==0.4.3
 qrcode==6.0
+
