Feature/kyc documents (#718)
* WIP: verification document start

* WIP: wip^2

* WIP: wip^3

* WIP: finally fix file upload on tests..

* WIP: auto set selfie tier2

* WIP: trade limits info ant stuff

* WIP: some admin changes

* WIP: before bike ride

* some admin changes

* wip: veriication.required_documents

* add support for util_status and id_status

* refactor nkyc POST

* GET kyc fixes

* remove unused code

* add address whitelisting

* dev media

--- a/wercker.yml
+++ b/wercker.yml
@@ -132,6 +132,7 @@ dev:
     - script:
         name: Django import verification fixtures
         code: |
+          python manage.py loaddata verification/fixtures/document_type.json
           python manage.py loaddata verification/fixtures/tier0.json
           python manage.py loaddata verification/fixtures/tier1.json
           python manage.py loaddata verification/fixtures/tier2.json
@@ -443,6 +444,7 @@ build:
           python /usr/src/app/manage.py loaddata referrals/fixtures/program.json
           python /usr/src/app/manage.py loaddata risk_management/fixtures/reserve.json
           python /usr/src/app/manage.py loaddata risk_management/fixtures/account.json
+          python /usr/src/app/manage.py loaddata verification/fixtures/document_type.json
           python /usr/src/app/manage.py loaddata verification/fixtures/tier0.json
           python /usr/src/app/manage.py loaddata verification/fixtures/tier1.json
           python /usr/src/app/manage.py loaddata verification/fixtures/tier2.json
